--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,12 @@
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 html, body, #root {
   height: 100%;
+  margin: 0;
+  overflow: hidden;
 }
 
 body {
