--- a/src/app/layout/layout.css
+++ b/src/app/layout/layout.css
@@ -380,6 +380,16 @@
   border-color: transparent;
 }
 
+.brand-initials {
+  font-weight: 900;
+  color: #fff;
+}
+.brand-logo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 @media (min-width: 900px) {
   .sidebar {
     display: block;
